--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,10 @@
-streamlit==1.31.0
-nltk==3.8.1
-numpy==1.24.3
-matplotlib==3.7.1
-networkx==3.1
-seaborn==0.12.2
-pandas==2.0.3
-gensim==4.3.1
-scikit-learn==1.3.0
-scipy==1.11.1
-spacy==3.7.2
+streamlit>=1.31.0
+nltk>=3.8.1
+numpy>=1.26.0
+matplotlib>=3.8.0
+networkx>=3.1
+seaborn>=0.13.0
+pandas>=2.1.0
+gensim>=4.3.2
+scikit-learn>=1.3.0
+scipy>=1.11.0
