--- a/requirements.txt
+++ b/requirements.txt
@@ -12,9 +12,9 @@ openpyxl>=3.0.0
 # SBERT embeddings
 sentence-transformers>=2.2.2
 
-# spaCy for lemmatization
+# spaCy + model
 spacy>=3.7.2
-spacy-lookups-data>=1.0.5      # ensures lemma tables are available
+spacy-lookups-data>=1.0.5
+en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl
 
-# Optional but recommended for stability
 tqdm>=4.66.1
