--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-streamlit>=1.31.0
-pandas>=2.1.0
+streamlit>=1.51.0
+nltk>=3.9.2
 numpy>=1.26.0
-matplotlib>=3.8.0
+pandas>=2.0.0
+matplotlib>=3.7.0
 scikit-learn>=1.3.0
-sentence-transformers>=2.2.2
 scipy>=1.11.0
+gensim>=4.3.0
 openpyxl>=3.0.0
